# SDiZO1

./: CMakeLists.txt  main.cpp
structures/: BSTree.cpp  BSTree.h  heap.cpp  heap.h  list.cpp  list.h  table.cpp  table.h
testing/: heapTest.cpp  heapTest.h  listTest.cpp  listTest.h  tableTest.cpp  tableTest.h  treeTest.cpp  treeTest.h
